fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ p {
 .tagline {
     font-family: "Playfair Display", serif;
     color: rgba(0, 0, 0, 1);
-    font-size: 1.2em;
+    font-size: 1.4em;
     text-align: center;
 }
 
@@ -112,6 +112,7 @@ p {
     font-family: "Playfair Display", serif;
     color: rgba(255, 84, 106, 0.69);
     font-size: 1.6em;
+    margin-top: 25px;
 }
 
 /* .products-gray-back {
